		Departments: added confirm on delete of resources
		Finance: fixed <? bug
		Finance: added ability to provide multiple company email addresses
		Finance: fixed bug preventing printing of receipts when status is 'Paid - Partial'
		Finance: added ability (off by default) for students to view their own invoices
		Finance: fixed PHP notice issues
		Finance: added confirm on delete of budget members
		Form Groups: adjusted labels in Sort By select
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue
		Formal Assessment: added interface for parents and students to view External Assessments (off by default)
		Formal Assessment: added table indexes for External Assessment to decrease loading time
		Individual Needs: fixed PHP Notice in moduleFunctions
		Library: added item count column to lending log
		Library: added count of records to Manage Catalog
		Library: removed required status from ISBN10 field in Print Publication
		Library: added Condition field to allow tracking of the physical state of an asset
		Library: added field to indicate whether an item will be replaced or not
		Library: fixed bug preventing ID clash check from working properly
		Library: fixed image and name alignment in lending view
		Library: fixed catalog export PHP Notice and file name errors
		Library: fixed issue where " breaks Name and other fields in catalogue manage edit view
		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
		Markbook: fixed uploaded response file selector gigantism issue
		Markbook: added line break display to full comment in various viewing locations
		Markbook: added session variables to keep the current course, filters and page selected
		Messenger: stripped JavaScript out of widget preview text.
		Messenger: removed signature from Quick Wall messages